still having issue with background image

--- a/index.html
+++ b/index.html
@@ -22,26 +22,28 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="jumbotron text-center mt-2 py-3">
-            <h1 class="display-4">Welcome to MCU Trivia!</h1>
-            <p class="lead">Test your trivia knowledge about Marvel Superhero's.</p>
-            <hr class="my-4">
-            <p id="timer">Question Timer: 10</p>
-        </div>
+    <div id="background">
+        <div class="container">
+            <div class="jumbotron text-center mt-2 py-3">
+                <h1 class="display-4">Welcome to MCU Trivia!</h1>
+                <p class="lead">Test your trivia knowledge about Marvel Superhero's.</p>
+                <hr class="my-4">
+                <p id="timer">Question Timer: 10</p>
+            </div>
 
-        <div class="row">
-            <div id="question" class="col-12"></div>
-        </div>
+            <div class="row">
+                <div id="question" class="col-12"></div>
+            </div>
 
-        <div id="answerArea" class="row">
-            <div class="answer col-12 text-center"></div>
-            <div class="answer col-12 text-center"></div>
-            <div class="answer col-12 text-center"></div>
-            <div class="answer col-12 text-center"></div>
-            <div id="answerGIF"></div>
-        </div>
+            <div id="answerArea" class="row">
+                <div class="answer col-12 text-center"></div>
+                <div class="answer col-12 text-center"></div>
+                <div class="answer col-12 text-center"></div>
+                <div class="answer col-12 text-center"></div>
+                <div id="answerGIF"></div>
+            </div>
 
+        </div>
     </div>
 
     <script src="assets/javascript/app.js"></script>
