added final questions/gifs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="answer col-12 text-center"></div>
                     <div class="answer col-12 text-center"></div>
                     <div class="answer col-12 text-center"></div>
-                    <div id="answerGIF"></div>
+                    <div id="answerGIF" class="col-12 text-center"></div>
                 </div>
             </div>
 
