added final score screen

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="quizArea" class="row rounded pb-5 pt-3 mx-1">
                 <div id="question" class="col-12"></div>
 
-                <div id="answerArea" class="col-12">
+                <div id="answerArea" class="col-12 text-center">
                     <div class="answer col-12 text-center"></div>
                     <div class="answer col-12 text-center"></div>
                     <div class="answer col-12 text-center"></div>
