added restart functionality

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p id="timer">Question Timer: 10</p>
             </div>
 
-            <div id="quizArea" class="row rounded pb-5 pt-3 mx-1">
+            <div id="quizArea" class="row rounded pb-5 pt-3 mx-1 text-center">
                 <div id="question" class="col-12"></div>
 
                 <div id="answerArea" class="col-12 text-center">
@@ -35,6 +35,11 @@
                     <div class="answer col-12 text-center"></div>
                     <div id="answerGIF" class="col-12 text-center"></div>
                 </div>
+                
+                <div class="col-12 text-center">
+                    <button id="restartBtn" class="btn btn-secondary text-center">Restart Game</button>
+                </div>
+
             </div>
 
         </div>
